some more updates to non-main page css

--- a/team.html
+++ b/team.html
@@ -13,8 +13,8 @@
   <body>
     <section class="navbar">
       <ul class="navbar-sub navbar-left">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="team.html">Team</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="team.html">Team</a></li>
         <li><a href="hardware.html">Hardware</a></li>
         <li><a href="software.html">Software</a></li>
         <li><a href="unused.html">Unused Ideas</a></li>
@@ -23,10 +23,10 @@
         <li><a href="#">Links</a></li>
       </ul>
     </section>
-    <section class="page-header">
-      <h1 class="project-name">Enph253-2015-vulcan</h1>
-      <h2 class="project-tagline">A website for our robot (VULCAN) which competed in the ENPH 253 robot competition in 2015.</h2>
-      <a href="https://github.com/gzgreg/enph253-2015-VULCAN" class="btn">View on GitHub</a>
+    <section class="page-header small">
+      <div class="container">
+        <h1 class="project-name">Team</h1>
+      </div>
     </section>
 
     <section class="main-content">
