--- a/software.html
+++ b/software.html
@@ -14,9 +14,9 @@
     <section class="navbar">
       <ul class="navbar-sub navbar-left">
         <li><a href="index.html">Home</a></li>
-        <li class="active"><a href="#">Team</a></li>
+        <li><a href="team.html">Team</a></li>
         <li><a href="hardware.html">Hardware</a></li>
-        <li><a href="software.html">Software</a></li>
+        <li class="active"><a href="#">Software</a></li>
         <li><a href="unused.html">Unused Ideas</a></li>
       </ul>
       <ul class="navbar-sub navbar-right">
@@ -25,7 +25,7 @@
     </section>
     <section class="page-header small">
       <div class="container">
-        <h1 class="project-name">Team</h1>
+        <h1 class="project-name">Software</h1>
       </div>
     </section>
 
