--- a/hardware.html
+++ b/hardware.html
@@ -31,10 +31,11 @@
 
     <section class="main-content">
         <p><a href="https://github.com/gzgreg/enph253-2015-VULCAN/tree/master/Solidworks%20Parts">Soldiworks Parts are available on GitHub here.</a></p>
-        <h1>Microcontroller</h1>
+        <h1>Arm</h1>
         <div class="body-text">
-            <img src="img/tinah.jpg" class="right" style="width: 300px;">
-            <p>Our robot, like all other robots in the ENPH253 course, was run using a TINAH board. This board is a custom shield for a Wiring I/O board, designed by Engineering Physics staff. It acts as a protective buffer for the board's inputs and outputs, as well as providing control outputs for 4 motors and 3 servos and an LCD screen. This board is programmed using the same interface as an Arduino board, using the C++ language.</p>
+            <img src="master/Solidworks%20Pictures/Arm%20render.JPG" class="right" style="width: 300px;">
+            <p>The arm is the most complicated mechanical system on our robot. Rather than using multiple simple arms to rescue the stuffed animals, we wanted 
+			to make a single arm with more versitility. This meant buliding an arm with 3 degrees of freedom. </p>
         </div>
 
       <footer class="site-footer">
