--- a/hardware.html
+++ b/hardware.html
@@ -33,7 +33,7 @@
         <p><a href="https://github.com/gzgreg/enph253-2015-VULCAN/tree/master/Solidworks%20Parts">Soldiworks Parts are available on GitHub here.</a></p>
         <h1>Arm</h1>
         <div class="body-text">
-            <img src="master/Solidworks%20Pictures/Arm%20render.JPG" class="right" style="width: 300px;">
+            <img src="https://github.com/gzgreg/enph253-2015-VULCAN/blob/master/Solidworks%20Pictures/Arm%20render.JPG" class="right" style="width: 300px;">
             <p>The arm is the most complicated mechanical system on our robot. Rather than using multiple simple arms to rescue the stuffed animals, we wanted 
 			to make a single arm with more versitility. This meant buliding an arm with 3 degrees of freedom. </p>
         </div>
