fiddling with padding on images

--- a/software.html
+++ b/software.html
@@ -34,7 +34,8 @@
       <h1>Microcontroller</h1>
       <div class="body-text">
         <img src="img/tinah.jpg" class="right" style="width: 300px;">
-        <p>Our robot, like all other robots in the ENPH253 course, was run using a TINAH board. This board is a custom shield for a Wiring I/O board, designed by Engineering Physics staff. It acts as a protective buffer for the board's inputs and outputs, as well as providing control outputs for 4 motors and 3 servos and an LCD screen. This board is programmed using the same interface as an Arduino board, using the C++ language.</p>
+        <p>Our robot, like all other robots in the ENPH253 course, was run using a TINAH board. This board is a custom shield for a Wiring I/O board, designed specifically for ENPH253. It acts as a protective buffer for the board's inputs and outputs, as well as providing control outputs for 4 motors and 3 servos and an LCD screen. This board is programmed using the same interface as an Arduino board, using the C++ language.</p>
+        <p>Information about the TINAH board can be found at <a href="http://projectlab.engphys.ubc.ca/enph-253-2015/tinah-2015/">the ENPH253 website.</a></p>
       </div>
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gzgreg/enph253-2015-VULCAN">Enph253-2015-vulcan</a> is maintained by <a href="https://github.com/gzgreg">gzgreg</a>.</span>
