edited team page

--- a/team.html
+++ b/team.html
@@ -30,6 +30,8 @@
     </section>
 
     <section class="main-content">
+	<img src="img/team%20photo.jpg" class="right" style="width: 1000px;">
+	<figcaption>Our Team, from left to right, Wilhelm Gavino, Riley Harney, James Wasteneys, Gregory Zhang</figcaption>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gzgreg/enph253-2015-VULCAN">Enph253-2015-vulcan</a> is maintained by <a href="https://github.com/gzgreg">gzgreg</a>.</span>
