small edit to hardware

--- a/hardware.html
+++ b/hardware.html
@@ -34,6 +34,7 @@
         <h1>Arm</h1>
         <div class="body-text">
             <img src="img/Solidworks%20Pictures/Arm%20render.JPG" class="right" style="width: 300px;">
+			<img src="img/Solidworks%20Pictures/arm%20render%202.JPG" class="right" style="width: 300px;">
             <p>The arm is the most complicated mechanical system on our robot. Rather than using multiple simple arms to rescue the stuffed animals, we wanted 
 			to make a single arm with more versatility. This meant building an arm with 3 degrees of freedom, one about a vertical axis and two about horizontal axes.
 			The vertical axis rotation was enabled by mounting the arm on a lazy susan bearing and rotating it with a motor attached to the base mount turning the arm using
