more small edits

--- a/hardware.html
+++ b/hardware.html
@@ -30,6 +30,8 @@
     </section>
 
     <section class="main-content">
+		<img src="img/Solidworks%20Pictures/Full%20robot%20Render%201.JPG" class="center" style="width: 1000px;">
+		<figcaption>Solidworks Rendering of the final robot </figcaption>
         <p><a href="https://github.com/gzgreg/enph253-2015-VULCAN/tree/master/Solidworks%20Parts">Soldiworks Parts are available on GitHub here.</a></p>
         <h1>Arm</h1>
         <div class="body-text">
