--- a/hardware.html
+++ b/hardware.html
@@ -46,7 +46,8 @@
 			pickup mechanism mounted to it to pick up the stuffed animals by way of the rare earth magnets mounted on top of them. This used a steel plate with an aluminum 
 			plate hanging freely underneath, when the mechanism came into contact with a magnet it would push the aluminum plate into the steel plate and activate a microswitch.
 			small RC servos could then push the aluminum plate back to release the magnet.</p>
-			<img src="img/Solidworks%20Pictures/arm%20render%202.JPG" class="right" style="width: 300px;">
+			<img src="img/Solidworks%20Pictures/arm%20render%202.JPG" class="right" style="width: 300px;">			
+			<img src="img/James'%20phone%20pics/IMG_20150731_162217815.jpg" class="right" style="width: 300px;">
         </div>
 		<h2>Chassis and Drive Train</h2>
 		<div class="body-text">
