Add links dropdown

--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
         <li><a href="unused.html">Unused Ideas</a></li>
       </ul>
       <ul class="navbar-sub navbar-right">
-        <li><a href="#">Links</a></li>
+        <li>
+          <a href="#">Links</a>
+          <ul class="navbar-dropdown">
+            <li><a href="http://projectlab.engphys.ubc.ca/enph-253-2015/" target="newtab">Competition</a></li>
+            <li><a href="http://www.engphys.ubc.ca/" target="newtab">Engineering Physics</a></li>
+        </li>
       </ul>
     </section>
     <section class="page-header">
