--- a/team.html
+++ b/team.html
@@ -17,7 +17,6 @@
         <li class="active"><a href="#">Team</a></li>
         <li><a href="hardware.html">Hardware</a></li>
         <li><a href="software.html">Software</a></li>
-        <li><a href="unused.html">Unused Ideas</a></li>
       </ul>
       <ul class="navbar-sub navbar-right">
         <li>
@@ -36,7 +35,7 @@
 
     <section class="main-content">
 	<img src="img/team%20photo.jpg" class="right" style="width: 1000px;">
-	<figcaption>Our Team, from left to right, Wilhelm Gavino, Riley Harney, James Wasteneys, and Gregory Zhang</figcaption>
+	<figcaption>Our team. From left to right: Wilhelm Gavino, Riley Harney, James Wasteneys, and Gregory Zhang</figcaption>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/gzgreg/enph253-2015-VULCAN">Enph253-2015-vulcan</a> is maintained by <a href="https://github.com/gzgreg">gzgreg</a>.</span>
